fix: remove global button margin, use flex gap for consistent spacing

--- a/frontend/src/components/ui/Button/Button.scss
+++ b/frontend/src/components/ui/Button/Button.scss
@@ -20,11 +20,6 @@
   font-family: $font;
   letter-spacing: .01em;
   @include foc;
-  margin-right: $sp2;
-
-  &:last-child {
-    margin-right: 0;
-  }
 
   &:disabled {
     opacity: .35;
